# MechBot

./: .gitignore  db copy.json  db.json  handle_database.py  initialize_database.py  keep_alive.py  main.py  mechbot.db  my_utils.py  pyproject.toml  pyproject.toml.backup  translations.json
cogs/: help_command.py  money.py  shop.py  utility_commands.py  xp_system.py
