[tool.poetry]
name = "MechBot"
version = "2.2.0"
description = ""
authors = ["Malpkakefirek"]

[tool.poetry.dependencies]
python = "^3.8"
backoff = "^1.10.0"
flask = "^2.0.0"
py-cord = "^2.2.2"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
